Add new dependencies and custom config

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,6 +8,9 @@
     "playwright.config.*"
   ],
   "compilerOptions": {
+    "moduleResolution":"node",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "composite": true,
     "module": "ESNext",
     "types": ["node"]
