--- a/package.json
+++ b/package.json
@@ -23,12 +23,18 @@
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/tsconfig": "^0.4.0",
+    "dotenv": "^16.1.4",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
+    "inversify-props": "^2.2.6",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
+    "pug": "^3.0.2",
+    "reflect-metadata": "^0.1.13",
+    "sass": "1.32.12",
     "typescript": "~5.0.4",
     "vite": "^4.3.9",
+    "vue-class-component": "^8.0.0-0",
     "vue-tsc": "^1.6.5"
   }
 }
