--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   },
@@ -20,8 +21,10 @@
     "@tsconfig/node18": "^2.0.1",
     "@types/node": "^18.16.17",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@volar/vue-language-plugin-pug": "^1.6.5",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/runtime-core": "^3.3.4",
     "@vue/tsconfig": "^0.4.0",
     "dotenv": "^16.1.4",
     "eslint": "^8.39.0",
@@ -34,7 +37,7 @@
     "sass": "1.32.12",
     "typescript": "~5.0.4",
     "vite": "^4.3.9",
-    "vue-class-component": "^8.0.0-0",
+    "vue-facing-decorator": "^2.1.20",
     "vue-tsc": "^1.6.5"
   }
 }
